@@ -22,6 +22,9 @@ Branch-39 Snapshot (Unreleased)
     HDFS-4084. Provide CLI support to allow and disallow snapshot 
     on a directory. (Brondon Li via suresh)
 
+    HDFS-4091. Add snapshot quota to limit the number of snapshots allowed.
+    (szetszwo)
+
 Release 2.7.0 - UNRELEASED
 
   INCOMPATIBLE CHANGES
